# llmstart_test_1

./: .gitignore  DEPLOY.md  Dockerfile  Dockerfile.pip  Dockerfile.simple  Makefile  QUICK_START.md  README.md  deploy.sh  docker-compose.yml  pyproject.toml  railway.json
.cursor/rules/: conventions.mdc  workflow.mdc
doc/: conventions.md  product_idea.md  tasklist.md  vision.md  workflow.md
docker/: Dockerfile
prompts/: system_prompt.txt
src/: __init__.py  healthcheck.py  main.py
src/bot/: __init__.py  handlers.py  middleware.py
src/config/: __init__.py  settings.py
src/llm/: __init__.py  client.py  prompts.py
src/memory/: __init__.py  storage.py
src/monitoring/: __init__.py  metrics.py
tests/: __init__.py
tests/integration/: test_bot.py
tests/test_bot/: __init__.py  test_handlers.py  test_middleware.py
tests/test_config/: __init__.py  test_settings.py
tests/test_llm/: __init__.py  test_client.py
tests/test_memory/: __init__.py  test_storage.py
tests/test_monitoring/: __init__.py  test_metrics.py
