[project]
name = "llm-learning-goals-bot"
version = "0.1.0"
description = "LLM-ассистент для формулировки целей обучения по таксономии Блума"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13.0",
    "openai>=1.51.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
